[gd_scene load_steps=2 format=3 uid="uid://dyt4xinhsh0yr"]

[ext_resource type="Script" path="res://scenes/dummy_scene.gd" id="1_fm6da"]

[node name="DummyScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fm6da")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 15.0
offset_right = 161.0
offset_bottom = 55.0

[node name="DisplayGold" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 4.0
offset_top = 7.0
offset_right = 139.0
offset_bottom = 32.0
text = "0 gp"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GainGold" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Gain Gold (+100)"

[node name="SpentGold" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Spend Gold (-95)"

[connection signal="pressed" from="VBoxContainer/GainGold" to="." method="_on_gain_gold_pressed"]
[connection signal="pressed" from="VBoxContainer/SpentGold" to="." method="_on_spent_gold_pressed"]
